# opentelemetry-demo

./: .dockerhub.env  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  README.md  WORKSPACE  docker-compose.minimal.yml  docker-compose.yml
.github/workflows/: checks.yml  release.yml  run-integration-tests.yml
ci/: datadog-agent-ddvalues-staging.yaml  datadog-agent-values-dd.yaml  datadog-agent-values-staging.yaml  datadog-agent-values.yaml  runtime-metrics-tracker-cronjob.yaml  values-dd-ingest-staging.yaml  values-docs.yaml  values-ds-gateway.yaml  values-kafka-poc.yaml  values.yaml
ci/scripts/: ci-deploy-agent.sh  ci-deploy-demo-staging.sh  ci-deploy-demo.sh  ci-deploy-reinvent.sh
k8s/: adservice.yaml  cartservice.yaml  checkoutservice.yaml  currencyservice.yaml  demo.yaml  emailservice.yaml  featureflagservice.yaml  frontend.yaml  loadgenerator.yaml  nodegroup.yaml  otel-collector-deployment.yaml  paymentservice.yaml  postgres.yaml  productcatalogservice.yaml  recommendationservice.yaml  redis.yaml  shippingservice.yaml
k8s/demo-services/: Chart.yaml  values.yaml
k8s/otel-collector/: BUILD.bazel  Chart.yaml  values.yaml
k8s/otel-collector/templates/: configmap.yaml  daemonset.yaml  roles.yaml  serviceaccount.yaml
k8s_dd_ingest/: adservice.yaml  cartservice.yaml  checkoutservice.yaml  currencyservice.yaml  emailservice.yaml  featureflagservice.yaml  frontend.yaml  loadgenerator.yaml  paymentservice.yaml  postgres.yaml  productcatalogservice.yaml  recommendationservice.yaml  redis.yaml  shippingservice.yaml
kubernetes/: opentelemetry-demo.yaml
src/accountingservice/: Dockerfile  go.mod  go.sum  main.go
src/adservice/: Dockerfile  build.gradle
src/checkoutservice/: Dockerfile  go.mod  go.sum  main.go
src/currencyservice/: Dockerfile
src/emailservice/: .ruby-version  Dockerfile  Gemfile  email_server.rb
(+69 files in other folders)
